# works-sprig

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
api/migrations/2020-10-02-090741_users/: up.sql
api/migrations/2020-10-02-090755_invitations/: up.sql
api/migrations/2020-12-23-142254_tasks/: up.sql
api/migrations/2020-12-23-142306_arrows/: down.sql  up.sql
api/migrations/2020-12-23-142802_durations/: down.sql  up.sql
api/migrations/2020-12-25-082302_stripes/: down.sql  up.sql
api/migrations/2021-01-14-183458_users/: up.sql
api/migrations/2021-01-14-183514_invitations/: up.sql
api/migrations/2021-01-14-183558_permissions/: up.sql
api/migrations/2021-01-21-102907_allocations/: up.sql
api/src/: errors.rs  handlers.rs  main.rs  models.rs  schema.rs  utils.rs
api/src/handlers/: _email.rs  app.rs  auth.rs  email.rs  invite.rs  register.rs
api/src/handlers/app/: _parser.rs  clone.rs  exec.rs  focus.rs  home.rs  parser.rs  star.rs  text.rs
web/: .gitignore  Dockerfile  elm.json
web/_init/: .dockerignore  .gitignore  elm.json
web/_init/css/: style.css  univ.scss
web/_init/src/: EndPoint.elm  Main.elm  Util.elm
web/_init/src/Div/: A.elm  B.elm
web/_init/src/Page/: Invite.elm  LP.elm  Login.elm  Register.elm
web/css/: _app.scss  _item.scss  _pre-app.scss  _univ.scss  app.scss  style.css  style.scss
web/src/: EndPoint.elm  Main.elm  Page.elm  Util.elm
web/src/Page/: Invite.elm  LP.elm  Login.elm  Objet.elm  Register.elm
web/src/Page/App/: App.elm  Placeholder.elm
(+2 files in other folders)
