[package]
name = "api"
version = "0.1.0"
authors = ["satu-n <49983831+satu-n@users.noreply.github.com>"]
edition = "2018"
[[bin]]
name = "api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-identity = "0.3"
actix-rt = "1.1"
actix-service = "1.0"
actix-web = "3.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
combine = "4.5"
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
lazy_static = "1.4"
r2d2 = "0.8"
regex = "1.4"
rust-argon2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
